// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SimpleSearchComponent should render default view 1`] = `
<div
  className="searchComponent false simple-search"
>
  <div
    className="columns is-gapless"
  >
    <div
      className="column search-field is-gapless hideMobile"
    >
      <div
        className="columns is-gapless search-field is-mobile"
      >
        <div
          className="column"
        >
          <TextField
            InputProps={null}
            aria-label="Enter your search query to search eSpace and then press Enter"
            error={null}
            fullWidth={true}
            id="searchField"
            label="Search eSpace"
            onChange={[Function]}
            onKeyPress={[Function]}
            placeholder="Enter your search query to search all fields in eSpace"
            required={false}
            select={false}
            style={Object {}}
            type="search"
            value=""
          />
        </div>
        <div
          className="is-hidden-tablet mobileSpacer"
        />
      </div>
    </div>
    <div
      className="column is-narrow searchButtonWrapper"
    >
      <WithStyles(Button)
        aria-label="Click to search eSpace"
        color="primary"
        disabled={false}
        fullWidth={true}
        onClick={[Function]}
        variant="raised"
      >
        Search
      </WithStyles(Button)>
    </div>
  </div>
</div>
`;

exports[`SimpleSearchComponent should render show mobile button 1`] = `
<div
  className="searchComponent false simple-search"
>
  <div
    className="columns is-gapless"
  >
    <div
      className="column search-field is-gapless hideMobile"
    >
      <div
        className="columns is-gapless search-field is-mobile"
      >
        <div
          className="column is-narrow searchIconPrefix is-hidden-tablet"
        >
          <IconButton
            className="mobileBackArrow"
            disableTouchRipple={false}
            disabled={false}
            iconStyle={Object {}}
            onClick={[Function]}
            tooltipPosition="bottom-center"
            touch={false}
          >
            <NavigationArrowBack />
          </IconButton>
        </div>
        <div
          className="column"
        >
          <TextField
            InputProps={null}
            aria-label="Enter your search query to search eSpace and then press Enter"
            error={null}
            fullWidth={true}
            id="searchField"
            label="Search eSpace"
            onChange={[Function]}
            onKeyPress={[Function]}
            placeholder="Enter your search query to search all fields in eSpace"
            required={false}
            select={false}
            style={Object {}}
            type="search"
            value=""
          />
        </div>
        <div
          className="is-hidden-tablet mobileSpacer"
        />
      </div>
    </div>
    <div
      className="column is-narrow is-hidden-tablet"
    >
      <IconButton
        aria-label="Click to search eSpace"
        className="searchButton"
        disableTouchRipple={false}
        disabled={false}
        hoveredStyle={
          Object {
            "backgroundColor": "rgba(0,0,0,0.3)",
            "borderRadius": "50%",
          }
        }
        iconStyle={Object {}}
        onClick={[Function]}
        tooltipPosition="bottom-center"
        touch={false}
      >
        <ActionSearch />
      </IconButton>
    </div>
    <div
      className="column is-narrow searchButtonWrapper"
    >
      <WithStyles(Button)
        aria-label="Click to search eSpace"
        color="primary"
        disabled={false}
        fullWidth={true}
        onClick={[Function]}
        variant="raised"
      >
        Search
      </WithStyles(Button)>
    </div>
  </div>
</div>
`;

exports[`SimpleSearchComponent should render show prefix icon in the search box 1`] = `
<div
  className="searchComponent false simple-search"
>
  <div
    className="columns is-gapless"
  >
    <div
      className="column search-field is-gapless hideMobile"
    >
      <div
        className="columns is-gapless search-field is-mobile"
      >
        <div
          className="column is-narrow searchIconPrefix is-hidden-mobile"
        >
          <ActionSearch />
        </div>
        <div
          className="column"
        >
          <TextField
            InputProps={null}
            aria-label="Enter your search query to search eSpace and then press Enter"
            error={null}
            fullWidth={true}
            id="searchField"
            label="Search eSpace"
            onChange={[Function]}
            onKeyPress={[Function]}
            placeholder="Enter your search query to search all fields in eSpace"
            required={false}
            select={false}
            style={Object {}}
            type="search"
            value=""
          />
        </div>
        <div
          className="is-hidden-tablet mobileSpacer"
        />
      </div>
    </div>
    <div
      className="column is-narrow searchButtonWrapper"
    >
      <WithStyles(Button)
        aria-label="Click to search eSpace"
        color="primary"
        disabled={false}
        fullWidth={true}
        onClick={[Function]}
        variant="raised"
      >
        Search
      </WithStyles(Button)>
    </div>
  </div>
</div>
`;

exports[`SimpleSearchComponent should render with a class "header" for use in AppBar 1`] = `
<div
  className="searchComponent header simple-search"
>
  <div
    className="columns is-gapless"
  >
    <div
      className="column search-field is-gapless hideMobile"
    >
      <div
        className="columns is-gapless search-field is-mobile"
      >
        <div
          className="column"
        >
          <TextField
            InputProps={
              Object {
                "disableUnderline": true,
              }
            }
            aria-label="Enter your search query to search eSpace and then press Enter"
            error={null}
            fullWidth={true}
            id="searchField"
            label={false}
            onChange={[Function]}
            onKeyPress={[Function]}
            placeholder="Search eSpace"
            required={false}
            select={false}
            style={
              Object {
                "padding": 8,
              }
            }
            type="search"
            value=""
          />
        </div>
        <div
          className="is-hidden-tablet mobileSpacer"
        />
      </div>
    </div>
    <div
      className="column is-narrow searchButtonWrapper"
    >
      <WithStyles(Button)
        aria-label="Click to search eSpace"
        color="primary"
        disabled={false}
        fullWidth={true}
        onClick={[Function]}
        variant="raised"
      >
        Search
      </WithStyles(Button)>
    </div>
  </div>
</div>
`;

exports[`SimpleSearchComponent should set search value from prop 1`] = `
<div
  className="searchComponent false simple-search"
>
  <div
    className="columns is-gapless"
  >
    <div
      className="column search-field is-gapless hideMobile"
    >
      <div
        className="columns is-gapless search-field is-mobile"
      >
        <div
          className="column"
        >
          <TextField
            InputProps={null}
            aria-label="Enter your search query to search eSpace and then press Enter"
            error={null}
            fullWidth={true}
            id="searchField"
            label="Search eSpace"
            onChange={[Function]}
            onKeyPress={[Function]}
            placeholder="Enter your search query to search all fields in eSpace"
            required={false}
            select={false}
            style={Object {}}
            type="search"
            value="i feel lucky"
          />
        </div>
        <div
          className="is-hidden-tablet mobileSpacer"
        />
      </div>
    </div>
    <div
      className="column is-narrow searchButtonWrapper"
    >
      <WithStyles(Button)
        aria-label="Click to search eSpace"
        color="primary"
        disabled={false}
        fullWidth={true}
        onClick={[Function]}
        variant="raised"
      >
        Search
      </WithStyles(Button)>
    </div>
    <div
      className="column is-narrow advancedSearchButtonWrapper"
    >
      <WithStyles(Button)
        aria-label="Click to switch to Advanced search"
        className="advancedButton"
        fullWidth={true}
        onClick={[Function]}
        variant="raised"
      >
        Advanced search
      </WithStyles(Button)>
    </div>
  </div>
</div>
`;
